@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2014-2015 openHAB UG (haftungsbeschraenkt) and others.
+ * Copyright (c) 2014-2016 by the respective copyright holders.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -9,8 +9,7 @@ package org.eclipse.smarthome.core.library.types;
 
 import java.util.Arrays;
 
-import javax.xml.bind.DatatypeConverter;
-
+import org.eclipse.smarthome.core.internal.PortableBase64;
 import org.eclipse.smarthome.core.types.PrimitiveType;
 import org.eclipse.smarthome.core.types.State;
 
@@ -38,17 +37,22 @@ public class RawType implements PrimitiveType, State {
     }
 
     public static RawType valueOf(String value) {
-        return new RawType(DatatypeConverter.parseBase64Binary(value));
+        return new RawType(PortableBase64.getDecoder().decode(value));
     }
 
     @Override
     public String toString() {
-        return DatatypeConverter.printBase64Binary(bytes);
+        return String.format("raw type: %d bytes", bytes.length);
+    }
+
+    @Override
+    public String toFullString() {
+        return PortableBase64.getEncoder().encode(bytes);
     }
 
     @Override
     public String format(String pattern) {
-        return toString();
+        return toFullString();
     }
 
     @Override
@@ -61,15 +65,19 @@ public class RawType implements PrimitiveType, State {
 
     @Override
     public boolean equals(Object obj) {
-        if (this == obj)
+        if (this == obj) {
             return true;
-        if (obj == null)
+        }
+        if (obj == null) {
             return false;
-        if (getClass() != obj.getClass())
+        }
+        if (getClass() != obj.getClass()) {
             return false;
+        }
         RawType other = (RawType) obj;
-        if (!Arrays.equals(bytes, other.bytes))
+        if (!Arrays.equals(bytes, other.bytes)) {
             return false;
+        }
         return true;
     }
 
